fix mobile css spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -85,7 +85,7 @@ body {
     justify-content: center;
 }
 
-body .wrapper {
+.wrapper {
     width: 60vw;
     min-width: 250px;
 }
